# custom-util

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: custom_util.yml
migrations/: custom_util.py  myutil.py
migrations/base/0.0.0/: pre-custom.py
migrations/custom_util/: __init__.py  custom_util.py  helpers.py  refactor.py  views.py
migrations/custom_util/views/: bs3_to_bs4.py  edit.py  misc.py  operations.py
src/custom_util/: custom_util.py  helpers.py  refactor.py  report.py
src/custom_util/views/: __init__.py  bs3_to_bs4.py  edit.py  misc.py  operations.py
