[project]
name = "odoo_upgrade_custom_util"
authors = [
    { name = "Odoo PS Tech Upgrade Team", email = "pstech@odoo.com" }
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["src/custom_util"]

[tool.hatch.build.sources]
"src" = "odoo/upgrade"

[tool.hatch.version]
source = "vcs"
raw-options.version_scheme = "calver-by-date"

[tool.hatch.build.hooks.vcs]
version-file = "src/custom_util/_version.py"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'ODOOADDONS', 'LOCALFOLDER']
known_first_party = ['odoo', 'openerp']
known_odooaddons = ['odoo.addons', 'openerp.addons']
lines_after_imports = 2
